--- a/sass/partials/_experience.scss
+++ b/sass/partials/_experience.scss
@@ -17,7 +17,7 @@
 		}
 
 		p {
-			flex-basis: 50%;
+			flex-basis: 35%;
 			flex-wrap: wrap;
 			font-size: 100%;
 			color: $black;
