--- a/sass/partials/_skills.scss
+++ b/sass/partials/_skills.scss
@@ -15,11 +15,4 @@
 		width: 30%;
 		background: $cloudburst;
 	}
-
-	.progress-text {
-		text-align: right;
- 		padding-right: 20px;
- 		line-height: 40px;
- 		color: white;
-	}
 }
